--- a/src/app/loading/loading.component.css
+++ b/src/app/loading/loading.component.css
@@ -18,16 +18,19 @@ h1 {
 
 .wrapper {
   text-align: center;
-  position: absolute;
-  z-index: 9000;
-  width: 480px;
-  height: 326px;
-  top: 100px;
-  left: 50%;
-  margin-left: -215px;
-  background-color: #ffffff;
-  outline: 9999px solid rgba(217, 217, 217, 0.95);
   font-weight: 400;
   line-height: 18px;
   padding: 60px 20px 20px 20px;
+  background-color: #ffffff;
+  z-index: 9000;
+
+  width: 480px;
+  height: 326px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  outline: 9999px solid rgba(217, 217, 217, 0.75);
 }
