--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,27 @@
-<h1>My Great App!</h1>
+<header>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Angular for Business</a>
+      <ul class="menu">
+        <li><a routerLink="/">Home</a></li>
+        <li class="dropdown">
+          <a href="#">Chapters</a>
+          <ul class="dropdown-content">
+            <li><a routerLink="/chapter-04">Chapter 4</a></li>
+            <li><a routerLink="/chapter-05">Chapter 5</a></li>
+            <!-- ... other chapters -->
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
 
-<button (click)="load()">Toggle Loading</button>
+<router-outlet></router-outlet>
 
-<app-loading label="Loading data now..." [shown]="isLoading"> </app-loading>
+<footer class="footer">
+  <div class="footer-content">
+    &copy; 2023 Michael D. Callaghan. All rights reserved.
+    <!-- You can add more footer content here -->
+  </div>
+</footer>
