--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,11 @@
         <li class="dropdown">
           <a href="#">Chapters</a>
           <ul class="dropdown-content">
-            <li><a routerLink="/chapter-04">Chapter 4</a></li>
-            <li><a routerLink="/chapter-05">Chapter 5</a></li>
+            <li>
+              <a routerLink="/simple-component">Simple Angular Component</a>
+            </li>
+            <li><a routerLink="/resolve-or-die">Resolve or Die</a></li>
+            <li><a routerLink="/ng-model-checkbox">Checkbox w/NgModel</a></li>
             <!-- ... other chapters -->
           </ul>
         </li>
