Added route guards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,18 @@
           <a href="#">Chapters</a>
           <ul class="dropdown-content">
             <li>
-              <a routerLink="/simple-component">Simple Angular Component</a>
+              <a routerLink="/angular-component"
+                >Chapter 4 - A Simple Angular Component</a
+              >
             </li>
-            <li><a routerLink="/resolve-or-die">Resolve or Die</a></li>
-            <li><a routerLink="/ng-model-checkbox">Checkbox w/NgModel</a></li>
+            <li>
+              <a routerLink="/route-guard"
+                >Chapter 5 - Guardians of the [Angular] Galaxy</a
+              >
+            </li>
+            <li>
+              <a routerLink="/resolve-or-die">Chapter 6 - Resolve or Die</a>
+            </li>
             <!-- ... other chapters -->
           </ul>
         </li>
